--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.33 2004/10/17 18:53:28 tom_kelly33 Exp $
+# $Id: rc.sysinit.in,v 1.34 2004/10/20 03:59:42 tom_kelly33 Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -460,7 +460,11 @@ setupinit() {
 	if `/bin/grep -iq livecd=initrd /proc/cmdline`; then
 		execshell
 	fi
-	
+
+	# clean up /sys (init mounts it via rc.sysinit)
+	docmd   "  Unmounting /sys filesystem" \
+		"umount /sys"
+
 	# clean up /proc (init mounts it via rc.sysinit)
 	docmd   "  Unmounting /proc filesystem" \
 		"umount /proc"
