--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.34 2004/10/20 03:59:42 tom_kelly33 Exp $
+# $Id: rc.sysinit.in,v 1.35 2004/10/20 17:05:25 tom_kelly33 Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -481,6 +481,5 @@ echo "--- MKLIVECD RC.SYSINIT ------------"
 setuproot ""
 setupinit ""
 echo "--- Exiting MKLIVECD RC.SYSINIT ----"
-echo "Starting $distro Linux init sequence..." 
-/etc/rc.d/rc.sysinit
+exec /etc/rc.d/rc.sysinit
 exit 0
