--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -22,7 +22,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.136 2004/10/05 02:03:38 tom_kelly33 Exp $
+# $Id: hwdetect.in,v 1.137 2004/10/29 04:47:24 tom_kelly33 Exp $
 #
 
 use strict;
@@ -1304,7 +1304,7 @@ sub hwdetect_writedisks {
 		# write /etc/fstab
 		system("mkdir -p $prefix/etc/livecd/hwdetect/");
 		print "    Writing $prefix/etc/fstab: ";
-		open FSTAB, '>>', "$prefix/etc/fstab";
+		open FSTAB, '>', "$prefix/etc/fstab";
 		print FSTAB "\n### ".getStr('disk_fstab_info')." $SCRIPT_NAME v$SCRIPT_VER\n";
 		open INFO, '>', "$prefix/etc/livecd/hwdetect/mounts.cfg";
 		print FSTAB "\n# USB\nnone\t/proc/bus/usb\tusbdevfs\tdefaults\t0 0\n" if ($usbfstab);
