--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -22,7 +22,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.124 2004/11/20 01:52:40 tom_kelly33 Exp $
+# $Id: mklivecd.in,v 1.125 2004/11/22 19:19:46 tom_kelly33 Exp $
 #
 
 use strict;
@@ -803,6 +803,7 @@ sub create_compressed {
 				my $gzroot = "$workdir/gz/";
 				mkdir_p($gzroot);
 				system("mkzftree -z 3 $o_root $gzroot");
+				cp_af($_, "$workdir/gzdir/boot/") foreach glob_("$o_root/boot/*");
 				$o_root = $gzroot;
 				$iso = "$iso -o $workdir/livecd/livecd.$o_looptype $o_root";
 			} else {
